[Site Muting] Allow user to mute site while in PiP mode

This CL updates the CanToggleAudioMute logic to always return true when
the user is in PiP mode.

Bug: 855686
Change-Id: Iea22547c8c4b50c859f84bf7277d08cdd736309b
Reviewed-on: https://chromium-review.googlesource.com/1112697
Reviewed-by: apacible <apacible@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570232}
Former-commit-id: 9c97e58e6acda53f36a87adbad5578d3ae3e91c5